force-app/main/default/objects/CaseInvestigation__c/CaseInvestigation__c.object-meta.xml
<CustomObject>
    <label>Case Investigation</label>
    <nameField>
        <displayFormat>CI-{00000000}</displayFormat>
        <label>Case Investigation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Investigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>