force-app/main/default/objects/CaseInvestigation__c/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article</label>
    <referenceTo>Article__c</referenceTo>
    <relationshipLabel>Case Investigations</relationshipLabel>
    <relationshipName>Case_Investigations_Art</relationshipName>
    <type>Lookup</type>
</CustomField>