force-app/main/default/objects/CaseInvestigation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Investigations</relationshipLabel>
    <relationshipName>Case_Investigations</relationshipName>
    <type>Lookup</type>
</CustomField>