force-app/main/default/objects/CaseInvestigation__c/fields/CaseInvestigationClosureDate__c.field-meta.xml
<CustomField>
    <fullName>CaseInvestigationClosureDate__c</fullName>
    <description>Stores the date time when the case investigation is in closed statuses</description>
    <inlineHelpText>Date time representing the case investigation closure date</inlineHelpText>
    <label>Case Investigation Closure Date</label>
    <type>DateTime</type>
</CustomField>