force-app/main/default/objects/CaseInvestigation__c/fields/CaseServiceSLA__c.field-meta.xml
<CustomField>
    <fullName>CaseServiceSLA__c</fullName>
    <description>This field is used to get value of Service SLA from case</description>
    <formula>Case__r.Service_SLA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Service SLA</label>
    <type>Text</type>
</CustomField>