force-app/main/default/objects/CaseInvestigation__c/fields/Deliveryinformation__c.field-meta.xml
<CustomField>
    <fullName>DeliveryInformation__c</fullName>
    <description>Used on MyNetwork community to add network response for ST cases.</description>
    <inlineHelpText>Relevant information about the delivery</inlineHelpText>
    <label>Delivery Information</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DeliveryOptions__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted by authorised building staff</fullName>
            </value>
            <value>
                <fullName>Business reception</fullName>
            </value>
            <value>
                <fullName>Letterbox</fullName>
            </value>
            <value>
                <fullName>Front door</fullName>
            </value>
            <value>
                <fullName>Side Door</fullName>
            </value>
            <value>
                <fullName>Mailroom</fullName>
            </value>
            <value>
                <fullName>Via dock</fullName>
            </value>
            <value>
                <fullName>Back Door</fullName>
            </value>
            <value>
                <fullName>Porch</fullName>
            </value>
            <value>
                <fullName>Carport/Verandah</fullName>
            </value>
            <value>
                <fullName>Side Gate</fullName>
            </value>
            <value>
                <fullName>Garage</fullName>
            </value>
            <value>
                <fullName>Apartment mailroom/concierge</fullName>
            </value>
            <value>
                <fullName>Behind pot plant</fullName>
            </value>
            <value>
                <fullName>Behind pillar</fullName>
            </value>
            <value>
                <fullName>Behind rubbish bin</fullName>
            </value>
            <value>
                <fullName>Customer is now in possession of the item</fullName>
            </value>
            <value>
                <fullName>Accepted by apartment/complex concierge</fullName>
            </value>
            <value>
                <fullName>RTS - Sender has the item</fullName>
            </value>
            <value>
                <fullName>Signed for by occupant</fullName>
            </value>
            <value>
                <fullName>Accepted by occupant</fullName>
            </value>
            <value>
                <fullName>Incorrect address on parcel - delivered as addressed</fullName>
            </value>
            <value>
                <fullName>Delivered to incorrect address - retrieval and redelivery</fullName>
            </value>
            <value>
                <fullName>Delivered to incorrect address - retrieval and carded to outlet</fullName>
            </value>
            <value>
                <fullName>Incorrect address on parcel - delivered by resident</fullName>
            </value>
            <value>
                <fullName>Delivered to incorrect address - not recovered - DC to pay compensation*</fullName>
            </value>
            <value>
                <fullName>Delivered to incorrect address - retrieval attempt - delivered by resident</fullName>
            </value>
            <value>
                <fullName>Delivered to incorrect address - retrieval attempt - delivered by another business</fullName>
            </value>
            <value>
                <fullName>PO BOX</fullName>
            </value>
            <value>
                <fullName>PO BOX diversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>