force-app/main/default/objects/CaseInvestigation__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <description>Formula to check the case investigation status is closed or not</description>
    <formula>ISPICKVAL( Status__c , &apos;Closed&apos;) ||  ISPICKVAL(Status__c, &apos;Closed - Required More Information&apos;)</formula>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>