force-app/main/default/objects/CaseInvestigation__c/fields/LastContactCentreUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastContactCentreUpdate__c</fullName>
    <description>This records timestamp whenever StarTrack contact centre team post an update on Case Investigation.</description>
    <inlineHelpText>This records timestamp whenever StarTrack contact centre team post an update on Case Investigation.</inlineHelpText>
    <label>Last Contact Centre Update</label>
    <type>DateTime</type>
</CustomField>