force-app/main/default/objects/CaseInvestigation__c/fields/MilestoneTimeStartDatetime__c.field-meta.xml
<CustomField>
    <fullName>MilestoneTimeStartDatetime__c</fullName>
    <description>Stores the milestone start date time</description>
    <label>MilestoneTime Start Datetime</label>
    <type>DateTime</type>
</CustomField>