force-app/main/default/objects/CaseInvestigation__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Network</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Network__c.Contact_Facility__c</field>
            <operation>equals</operation>
            <value>MyNetwork</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Case Investigations</relationshipLabel>
    <relationshipName>Case_Investigations</relationshipName>
    <type>Lookup</type>
</CustomField>