force-app/main/default/objects/CaseInvestigation__c/fields/NetworkMilestoneCurrentTier__c.field-meta.xml
<CustomField>
    <fullName>NetworkMilestoneCurrentTier__c</fullName>
    <description>Stores the network milestone current tier</description>
    <label>Network Milestone Current Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>