force-app/main/default/objects/CaseInvestigation__c/fields/NetworkMilestoneNextViolationDatetime__c.field-meta.xml
<CustomField>
    <fullName>NetworkMilestoneNextViolationDatetime__c</fullName>
    <description>Stores the network milestone next violation date time</description>
    <label>NetworkMilestone Next Violation Datetime</label>
    <type>DateTime</type>
</CustomField>