force-app/main/default/objects/CaseInvestigation__c/fields/NetworkMilestonesViolated__c.field-meta.xml
<CustomField>
    <fullName>NetworkMilestonesViolated__c</fullName>
    <inlineHelpText>This is to show which milestone tier this case investigation has violated</inlineHelpText>
    <label>Network Milestones Violated</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>