force-app/main/default/objects/CaseInvestigation__c/fields/ReferenceID__c.field-meta.xml
<CustomField>
    <fullName>ReferenceID__c</fullName>
    <description>The reference id for the case investigation record i.e article number</description>
	<inlineHelpText>This is Article ID</inlineHelpText>
    <externalId>true</externalId>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>