force-app/main/default/objects/CaseInvestigation__c/fields/RequireMoreInformation__c.field-meta.xml
<CustomField>
    <fullName>RequireMoreInformation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on MyNetwork community to add network response for ST cases.</description>
    <inlineHelpText>Please tick this checkbox if more information is required from the customer service.</inlineHelpText>
    <label>Require More Information</label>
    <type>Checkbox</type>
</CustomField>