force-app/main/default/objects/CaseInvestigation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>More information required</fullName>
            </value>
            <value>
                <fullName>Awaiting invesitgation</fullName>
                <isActive>false</isActive>
                <label>Awaiting invesitgation</label>
            </value>
            <value>
                <fullName>Closed - Required More Information</fullName>
                <isActive>false</isActive>
                <label>Closed - Required More Information</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
                <isActive>false</isActive>
                <label>Resolved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>