force-app/main/default/objects/CaseInvestigation__c/recordTypes/StarTrack_MyNetwork.recordType-meta.xml
<RecordType>
    <fullName>StarTrack_MyNetwork</fullName>
    <active>true</active>
    <description>This is for StarTrack contact centre users to assign case investigation to AP MyNetwork users</description>
    <label>StarTrack MyNetwork</label>
</RecordType>