force-app/main/default/objects/CaseInvestigation__c/validationRules/Prevent_Contact_Centre_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Contact_Centre_Status_Change</fullName>
    <active>true</active>
    <description>This rule prevents contact centre user to change status from “More information required” to anything but “New”. ST contact centre user will only be allowed to change the case investigation status from “More information required” to “New”</description>
    <errorConditionFormula>AND(CONTAINS( $User.Profile_Name_in_Text__c , &quot;StarTrack Support&quot;),  ISCHANGED( Status__c),  ISPICKVAL(PRIORVALUE(Status__c), &quot;More information required&quot;),   NOT(ISPICKVAL(Status__c, &quot;New&quot;)))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>This case investigation status change is not allowed.</errorMessage>
</ValidationRule>